rutas no dinamicas

--- a/templates/informacion.html
+++ b/templates/informacion.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprendiendo Flask con Mario Alvarez</title>
 </head>
 <body>
+    <h1>Aprendiendo Flask con Mario Alvarez</h1>
+    <hr/>
+        <ul>
+            <li>
+                <a href="/">Inicio</a>
+            </li>
+            <li>
+                <a href="/informacion">Informacion</a>
+            </li>
+            <li>
+                <a href="/contacto">Contacto</a>
+            </li>
+            <li>
+                <a href="/lenguajes">Lenguajes de Programacion</a>
+            </li>
+        </ul>
+    <hr/>
     <h1>Pagina de informacion</h1>
     <p>Esta es la pagina de información</p>
     {{texto|safe}}
