rutas dinamicas con url_for de Flask

--- a/templates/informacion.html
+++ b/templates/informacion.html
@@ -14,13 +14,13 @@
                 <a href="/">Inicio</a>
             </li>
             <li>
-                <a href="/informacion">Informacion</a>
+                <a href="{{ url_for('informacion') }}">Informacion</a>
             </li>
             <li>
-                <a href="/contacto">Contacto</a>
+                <a href="{{ url_for('contacto') }}">Contacto</a>
             </li>
             <li>
-                <a href="/lenguajes">Lenguajes de Programacion</a>
+                <a href="{{ url_for('lenguajes') }}">Lenguajes de Programacion</a>
             </li>
         </ul>
     <hr/>
