--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprendiendo Flask con Mario Alvarez</title>
-</head>
-<body>
-    <h1>Aprendiendo Flask con Mario Alvarez</h1>
-</body>
-</html>
+{% extends 'layout.html' %}
+{% block title %}
+    Informacion
+{% endblock %}
+{% block content %}
+    <h1>Aprendiendo Flask con Mario Alvarez</h1>    
+{% endblock %}
