--- a/templates/informacion.html
+++ b/templates/informacion.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprendiendo Flask con Mario Alvarez</title>
-</head>
-<body>
-    <h1>Aprendiendo Flask con Mario Alvarez</h1>
-    <hr/>
-        <ul>
-            <li>
-                <a href="/">Inicio</a>
-            </li>
-            <li>
-                <a href="{{ url_for('informacion') }}">Informacion</a>
-            </li>
-            <li>
-                <a href="{{ url_for('contacto') }}">Contacto</a>
-            </li>
-            <li>
-                <a href="{{ url_for('lenguajes') }}">Lenguajes de Programacion</a>
-            </li>
-        </ul>
-    <hr/>
-    <h1>Pagina de informacion</h1>
-    <p>Esta es la pagina de información</p>
-    {{texto|safe}}
-</body>
-</html>
+{% extends 'layout.html' %}
+{% block title %}
+    Informacion
+{% endblock %}
+{% block content %}
+<h1>Pagina de informacion</h1>
+<p>Esta es la pagina de información</p>
+{{texto|safe}}
+{% endblock %}
