--- a/templates/lenguajes.html
+++ b/templates/lenguajes.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 {% block title %}
     Lenguajes
+
+    {{ super() }}
 {% endblock %}
 {% block content %}
     <h1>Aprendiendo Flask con Mario Alvarez</h1>    
