--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,9 @@
     Home
 {% endblock %}
 {% block content %}
-    <h1>Aprendiendo Flask con Mario Alvarez</h1>    
+    <h1>Pagina de Inicio</h1>    
+
+    {{dato1}}
+    {{dato2}}
+    {{lista}}
 {% endblock %}
