comentarios en Flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,10 @@
 {% block content %}
     <h1>Pagina de Inicio</h1>    
 
+    {#
     {{dato1}}
     {{dato2}}
     {{lista}}
+    #}
+    {# commentario #}
 {% endblock %}
